# wasm-app

./: .gitignore  README.md  build.cmd  build.ps1  release.cmd  router.php  serve.cmd
crate/: Cargo.toml  lint_help.txt
crate/src/: app.rs  lib.rs  routes.rs  todo.rs  todo_model.rs
crate/src/components/: mod.rs  navbar.rs
crate/src/pages/: about.rs  home.rs
crate/src/utils/: logger.rs  mod.rs
