[package]
name = "wasm-app"
version = "0.1.0"
categories = ["wasm"]
authors = ["Samuel Torres <absfregs@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = { version="0.16", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
yew-router = { version = "0.13", features = ["web_sys"]}
web-sys = "0.3"
# yew_styles = "0.4.0"

# My libs
serde_json = "*"
json = "*"